# vndb_rs

./: CRATES_README.md  Cargo.toml  README.org
.github/workflows/: push.yaml
src/: lib.rs
src/common/: mod.rs  models.rs  request.rs  response.rs
src/common/dbstats/: mod.rs
src/common/error/: mod.rs
src/common/get/: character.rs  mod.rs  producer.rs  release.rs  staff.rs  ulist.rs  ulistlabels.rs  user.rs  vn.rs
src/common/login/: mod.rs
src/common/set/: mod.rs  ulist.rs
src/sync/: client.rs  mod.rs
tests/: mod.rs  test_utils.rs
tests/data/: character.json  producer.json  release.json  staff.json  ulist.json  ulistlabels.json  user.json  vn.json
tests/dbstats/: mod.rs
tests/error/: mod.rs
tests/get/: mod.rs
tests/login/: mod.rs
tests/set/: mod.rs
