[package]
name = "vndb_rs"
version = "0.1.0"
authors = ["forlos <forlos@disroot.org>"]
edition = "2018"

[dependencies]
# tokio = { version = "0.2.11", features = ["full"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
derive_builder = "0.9.0"
strum = "0.18.0"
strum_macros = "0.18.0"
serde_repr = "0.1.5"
